Se sube el responsive

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1>-Cervezas-</h1>
             </header>
             <div class="seccion-destacadas">
-                <div class="tarjeta-bebida">
+                <div class="tarjeta-bebida tarjeta-destacada">
                     <div class="imagen-destacada">
                         <span aria-label="Novedad">
                             Novedad
@@ -59,7 +59,7 @@
                     <h2>
                         Lúpulo Salvaje
                     </h2>
-                    <div class="info-bebida destacada">
+                    <div class="info-bebida">
                         <span>IPA (Indian Pale Ale)</span>
                         <span>|</span>
                         <span>6.5%</span>
@@ -72,7 +72,7 @@
                     </footer>
                 </div>
 
-                <div class="tarjeta-bebida">
+                <div class="tarjeta-bebida tarjeta-destacada">
                     <div class="imagen-destacada">
                         <span aria-label="Novedad">
                             La mas pedida
@@ -95,7 +95,7 @@
                     </footer>
                 </div>
 
-                <div class="tarjeta-bebida">
+                <div class="tarjeta-bebida tarjeta-destacada">
                     <div class="imagen-destacada">
                         <span aria-label="Novedad">
                             Clasica
@@ -142,8 +142,8 @@
                 </aside>
                 <section class="grid-carta" id="grid-carta">
                 </section>
-                <div id="paginacion" class="paginacion">
-                </div>
+                <!-- <div id="paginacion" class="paginacion">
+                </div> -->
             </div>
         </section>
 
