--- a/index.html
+++ b/index.html
@@ -10,32 +10,37 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Pacifico&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rock+Salt&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+    <div class="preloader">
+        <div class="spinner"></div>
+    </div>
+    
     <header class="header-principal">
-        <div>
-            <button type="button" id="btn-menu-desplegable"><i class="fa-solid fa-bars"></i></button>
+        <nav class="navegacion-principal-container container">
+            <button type="button" id="btn-menu-desplegable" aria-label="Abrir menú"><i class="fa-solid fa-bars" id="icono-menu"></i></button>
+
             <div class="logo">
                 <a href="#">
-                    <img src="img/logo.png" alt="">
+                    <img src="img/logo.png" alt="Logo del bar">
                 </a>
             </div>
-            <nav class="nav-header" id="nav-header">
+
+            <nav class="nav-menu" id="nav-menu">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Cervezas</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#" tabindex="0">Inicio</a></li>
+                    <li><a href="#" tabindex="0">Cervezas</a></li>
+                    <li><a href="#" tabindex="0">Contacto</a></li>
                 </ul>
             </nav>
-        </div>
+        </nav>
     </header>
+
     <main>
         <section class="seccion-hero">
             <div class="hero-content">
@@ -44,6 +49,7 @@
                 <h2>Promo<br>en<br>tragos</h2>
             </div>
         </section>
+
         <section class="container section">
             <header class="seccion-header">
                 <h1>-Cervezas-</h1>
@@ -177,6 +183,7 @@
             </main>
         </section>
     </main>
+
     <footer class="footer-principal">
         <div class="info-contacto-footer-container">
             <div class="logo">
@@ -193,7 +200,7 @@
                 <div class="redes-sociales-footer">
                     <ul>
                         <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
