Actualizaciones de estilos

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <nav class="nav-menu" id="nav-menu">
                 <ul>
                     <li><a href="#" tabindex="0">Inicio</a></li>
-                    <li><a href="#" tabindex="0">Cervezas</a></li>
-                    <li><a href="#" tabindex="0">Contacto</a></li>
+                    <li><a href="#cervezas" tabindex="0">Cervezas</a></li>
+                    <li><a href="#contacto" tabindex="0">Contacto</a></li>
                 </ul>
             </nav>
         </nav>
@@ -130,7 +130,7 @@
             <hr class="divisor">
         </div>
             
-        <section class="container section animation-section">
+        <section class="container section animation-section" id="cervezas">
             <header class="seccion-header">
                 <h1>-Carta-</h1>
             </header>
@@ -157,7 +157,7 @@
             <hr class="divisor">
         </div>
 
-        <section class="container section animation-section">
+        <section class="container section animation-section" id="contacto">
             <header class="seccion-header">
                 <h1>Contacto</h1>
             </header>
@@ -195,12 +195,12 @@
                 <div>
                     <p>297-4962803</p>
                     <p>cerveceriawolf@gmail.com
-                    <p>Avenida Independencia 504</p>
+                    <p>Avenida Independencia 89</p>
                 </div>
                 <div class="redes-sociales-footer">
                     <ul>
-                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/wolf.cerveceria/"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com/p/Wolf-Cervecer%C3%ADa-Artesanal-100063657965986/?_rdr"><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
