Actualizaciones de estilos y menu desplegable

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <section class="container section">
             <header class="seccion-header">
-                <h1>-Cervezas-</h1>
+                <h1>-Novedades-</h1>
             </header>
             <div class="seccion-destacadas">
                 <div class="tarjeta-bebida tarjeta-destacada">
