Se agrega una modal para la descripcion de bebidas

--- a/index.html
+++ b/index.html
@@ -55,74 +55,96 @@
                 <h1>-Novedades-</h1>
             </header>
             <div class="seccion-destacadas">
-                <div class="tarjeta-bebida tarjeta-destacada">
-                    <div class="imagen-destacada">
-                        <span aria-label="Novedad">
-                            Novedad
-                        </span>
-                        <img src="img/destacada1.jpeg" alt="Imagen de Lúpulo Salvaje">
+                <div class="tarjeta-container">
+                    <div class="tarjeta-bebida tarjeta-destacada">
+                        <div class="imagen-destacada">
+                            <span aria-label="Novedad">
+                                Novedad
+                            </span>
+                            <img src="img/destacada1.jpeg" alt="Imagen de Lúpulo Salvaje">
+                        </div>
+                        <h2>
+                            Lúpulo Salvaje
+                        </h2>
+                        <div class="info-bebida">
+                            <span>IPA (Indian Pale Ale)</span>
+                            <span>|</span>
+                            <span>6.5%</span>
+                            <span>|</span>
+                            <span>60 IBU</span>
+                        </div>
+                        <footer class="acciones-tarjeta">
+                            <button type="button" class="btn-carrito"><i class="fa-solid fa-cart-shopping"></i></button>
+                            <button type="button" class="btn-ver-mas" data-beer="novedad"><i class="fa-solid fa-eye"></i></button>
+                        </footer>
                     </div>
-                    <h2>
-                        Lúpulo Salvaje
-                    </h2>
-                    <div class="info-bebida">
-                        <span>IPA (Indian Pale Ale)</span>
-                        <span>|</span>
-                        <span>6.5%</span>
-                        <span>|</span>
-                        <span>60 IBU</span>
+                    <div class="bebida-descripcion">
+                        <h3>Lúpulo Salvaje</h3>
+                        <p>Una cerveza con un sabor intenso y amargo, ideal para los amantes de las cervezas fuertes.</p>
+                        <button type="button" class="btn-ver-menos">Ver menos</button>
                     </div>
-                    <footer class="acciones-tarjeta">
-                        <button type="button" class="btn-carrito"><i class="fa-solid fa-cart-shopping"></i></button>
-                        <button type="button" class="btn-mas-info" data-beer="novedad"><i class="fa-solid fa-eye"></i></button>
-                    </footer>
                 </div>
 
-                <div class="tarjeta-bebida tarjeta-destacada">
-                    <div class="imagen-destacada">
-                        <span aria-label="Novedad">
-                            La mas pedida
-                        </span>
-                        <img src="img/destacada2.jpeg" alt="Imagen de Lúpulo Salvaje">
+                <div class="tarjeta-container">
+                    <div class="tarjeta-bebida tarjeta-destacada">
+                        <div class="imagen-destacada">
+                            <span aria-label="Novedad">
+                                La mas pedida
+                            </span>
+                            <img src="img/destacada2.jpeg" alt="Imagen de Lúpulo Salvaje">
+                        </div>
+                        <h2>
+                            Dorado Miel
+                        </h2>
+                        <div class="info-bebida destacada">
+                            <span>Belgian Tripel</span>
+                            <span>|</span>
+                            <span>8.5%</span>
+                            <span>|</span>
+                            <span>30 IBU</span>
+                        </div>
+                        <footer class="acciones-tarjeta">
+                            <button type="button" class="btn-carrito"><i class="fa-solid fa-cart-shopping"></i></button>
+                            <button type="button" class="btn-ver-mas" data-beer="mas-pedida"><i class="fa-solid fa-eye"></i></button>
+                        </footer>
                     </div>
-                    <h2>
-                        Dorado Miel
-                    </h2>
-                    <div class="info-bebida destacada">
-                        <span>Belgian Tripel</span>
-                        <span>|</span>
-                        <span>8.5%</span>
-                        <span>|</span>
-                        <span>30 IBU</span>
+                    <div class="bebida-descripcion">
+                        <h3>Dorado miel</h3>
+                        <p>Una cerveza con un sabor intenso y amargo, ideal para los amantes de las cervezas fuertes.</p>
+                        <button type="button" class="btn-ver-menos">Ver menos</button>
                     </div>
-                    <footer class="acciones-tarjeta">
-                        <button type="button" class="btn-carrito"><i class="fa-solid fa-cart-shopping"></i></button>
-                        <button type="button" class="btn-mas-info" data-beer="mas-pedida"><i class="fa-solid fa-eye"></i></button>
-                    </footer>
                 </div>
 
-                <div class="tarjeta-bebida tarjeta-destacada">
-                    <div class="imagen-destacada">
-                        <span aria-label="Novedad">
-                            Clasica
-                        </span>
-                        <img src="img/destacada3.jpeg" alt="Imagen de Lúpulo Salvaje">
+                <div class="tarjeta-container">
+                    <div class="tarjeta-bebida tarjeta-destacada">
+                        <div class="imagen-destacada">
+                            <span aria-label="Novedad">
+                                Clasica
+                            </span>
+                            <img src="img/destacada3.jpeg" alt="Imagen de Lúpulo Salvaje">
+                        </div>
+                        <h2>
+                            Trigo Suave
+                        </h2>
+                        <div class="info-bebida destacada">
+                            <span>Hefeweizen</span>
+                            <span>|</span>
+                            <span>5.2%</span>
+                            <span>|</span>
+                            <span>15 IBU</span>
+                        </div>
+                        <footer class="acciones-tarjeta">
+                            <button type="button" class="btn-carrito"><i class="fa-solid fa-cart-shopping"></i></button>
+                            <button type="button" class="btn-ver-mas" data-beer="clasica"><i class="fa-solid fa-eye"></i></button>
+                        </footer>
                     </div>
-                    <h2>
-                        Trigo Suave
-                    </h2>
-                    <div class="info-bebida destacada">
-                        <span>Hefeweizen</span>
-                        <span>|</span>
-                        <span>5.2%</span>
-                        <span>|</span>
-                        <span>15 IBU</span>
+                    <div class="bebida-descripcion">
+                        <h3>Trigo Suave</h3>
+                        <p>Una cerveza con un sabor intenso y amargo, ideal para los amantes de las cervezas fuertes.</p>
+                        <button type="button" class="btn-ver-menos">Ver menos</button>
                     </div>
-                    <footer class="acciones-tarjeta">
-                        <button type="button" class="btn-carrito"><i class="fa-solid fa-cart-shopping"></i></button>
-                        <button type="button" class="btn-mas-info" data-beer="clasica"><i class="fa-solid fa-eye"></i></button>
-                    </footer>
                 </div>
+
             </div>
         </section>
 
